2004-06-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* events.c: 
	* events.h:
	* menu.c: Continue work on the click-to-move code. Nearly there.

2004-06-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c: Add the click_to_move global variable.

	* aisleriot.schemas.in: 
	* menu.c: Reorganise the menus and add a click-to-move option. 
	Also add a gconf key for click-to-move and include myself in the
	credits.

2004-06-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* draw.c: Add code to high-light a card. This will be useful when
	we implement click-to-move.

	* Makefile.am:
	* card.c:
	* slot.png: Move the slot image from gdk-card-image to here. 
	Fixes bug #144890.

2004-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c (redo_set_sensitive): Oops, off-by-one menu indexing for
	undo/redo. Bug #144781.

2004-06-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* freecell.scm: Add hint support. Written by Matthew V. Ball
	<mball@siliconashes.net> (see bug #134798).

2004-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c:
	* sol.h:
	* dialog.c: Delay scanning the games directory until we need to.
	Also replace the scan of filenames with a name->filename routine
	and a single lookup when selecting the variation on the command 
	line. Fixes bug #143331 the hard way.

Sat Jun  5 01:22:47 2004  Jonathan Blandford  <jrb@gnome.org>

	* odessa.scm (game-over): Fix a bug in odessa that has been
	bugging me for seven years.  Now the hint support will check for
	moves in the tableau before trying to move an ace to the
	foundation.

2004-05-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* cscmi.c: Fix compiler warnings.

2004-05-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* valentine.scm (button-clicked): Patch from
	tom@gentoo.kicks-ass.org to fix the case where there are no cards
	in the stock, but one on the waster. You can now redeal in that
	situation.

2004-05-07  Callum McKenzie  <callum@physics.otago.ac.nz>
