@@ -240,6 +240,14 @@ been coded for your pleasure in the GNOME scripting language (Scheme).
   it so that you can see what it is.
  </para>
  <para>
+  There is an alternative way to move cards. By selecting
+  <guimenuitem>Click to move</guimenuitem> from the
+  <guimenu>control</guimenu> menu you can click once to pick up a card
+  and then click again to place it. This can be faster than dragging and
+  will be easier on your hand since you don't have to hold the mouse
+  down. However, it may take a while to get used to.
+ </para>
+ <para>
   Statistics on how well you have done at a particular game are
   available by selecting <guimenuitem>Statistics</guimenuitem> from
   the <guimenu>Game</guimenu> menu. Only games where you actually
