@@ -1,3 +1,7 @@
+2004-06-30  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* C/aisleriot.xml: Document click-to-move.
+
 2004-05-19  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* C/quatorze.xml: Fix a typo. Spotted by Kurt McKee 
