@@ -1,3 +1,7 @@
+2004-06-30  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* events.c: Finsih off click-to-move.
+
 2004-06-29  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* events.c: 
